// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Collection /> correctly forwards the element props and merges the additional props 1`] = `
<Collection
  className={null}
  container="div"
  elementIndexProp="myIndex"
  firstElementProp={null}
  lastElementProp={null}
>
  <div
    className={null}
  >
    <CollectionItem
      element={
        <TestElement
          amIFirst={false}
          amILast={false}
          myIndex={0}
          testData="first"
        />
      }
      elementIndex={0}
      elementIndexProp="myIndex"
      firstElementProp={null}
      isFirstElement={true}
      isLastElement={false}
      key=".0"
      lastElementProp={null}
    >
      <TestElement
        amIFirst={false}
        amILast={false}
        myIndex={0}
        testData="first"
      >
        <li>
          first
          Item no. 
          0
        </li>
      </TestElement>
    </CollectionItem>
    <CollectionItem
      element={
        <TestElement
          amIFirst={false}
          amILast={false}
          myIndex={0}
          testData="second"
        />
      }
      elementIndex={1}
      elementIndexProp="myIndex"
      firstElementProp={null}
      isFirstElement={false}
      isLastElement={false}
      key=".1"
      lastElementProp={null}
    >
      <TestElement
        amIFirst={false}
        amILast={false}
        myIndex={1}
        testData="second"
      >
        <li>
          second
          Item no. 
          1
        </li>
      </TestElement>
    </CollectionItem>
    <CollectionItem
      element={
        <TestElement
          amIFirst={false}
          amILast={false}
          myIndex={0}
          testData="third"
        />
      }
      elementIndex={2}
      elementIndexProp="myIndex"
      firstElementProp={null}
      isFirstElement={false}
      isLastElement={true}
      key=".2"
      lastElementProp={null}
    >
      <TestElement
        amIFirst={false}
        amILast={false}
        myIndex={2}
        testData="third"
      >
        <li>
          third
          Item no. 
          2
        </li>
      </TestElement>
    </CollectionItem>
  </div>
</Collection>
`;

exports[`<Collection /> receives the first/last props 1`] = `
<Collection
  className={null}
  container="div"
  elementIndexProp="myIndex"
  firstElementProp="amIFirst"
  lastElementProp="amILast"
>
  <div
    className={null}
  >
    <CollectionItem
      element={
        <TestElement
          amIFirst={false}
          amILast={false}
          myIndex={0}
          testData="first"
        />
      }
      elementIndex={0}
      elementIndexProp="myIndex"
      firstElementProp="amIFirst"
      isFirstElement={true}
      isLastElement={false}
      key=".0"
      lastElementProp="amILast"
    >
      <TestElement
        amIFirst={true}
        amILast={false}
        myIndex={0}
        testData="first"
      >
        <li>
          first
          Item no. 
          0
          <span
            className="first"
          >
            (First element)
          </span>
        </li>
      </TestElement>
    </CollectionItem>
    <CollectionItem
      element={
        <TestElement
          amIFirst={false}
          amILast={false}
          myIndex={0}
          testData="second"
        />
      }
      elementIndex={1}
      elementIndexProp="myIndex"
      firstElementProp="amIFirst"
      isFirstElement={false}
      isLastElement={false}
      key=".1"
      lastElementProp="amILast"
    >
      <TestElement
        amIFirst={false}
        amILast={false}
        myIndex={1}
        testData="second"
      >
        <li>
          second
          Item no. 
          1
        </li>
      </TestElement>
    </CollectionItem>
    <CollectionItem
      element={
        <TestElement
          amIFirst={false}
          amILast={false}
          myIndex={0}
          testData="third"
        />
      }
      elementIndex={2}
      elementIndexProp="myIndex"
      firstElementProp="amIFirst"
      isFirstElement={false}
      isLastElement={true}
      key=".2"
      lastElementProp="amILast"
    >
      <TestElement
        amIFirst={false}
        amILast={true}
        myIndex={2}
        testData="third"
      >
        <li>
          third
          Item no. 
          2
          <span
            className="last"
          >
            (Last element)
          </span>
        </li>
      </TestElement>
    </CollectionItem>
  </div>
</Collection>
`;

exports[`<Collection /> renders the correct container tag 1`] = `
<ol
  className={null}
/>
`;

exports[`<Collection /> renders with children 1`] = `
<Collection
  className={null}
  container="div"
  elementIndexProp="myIndex"
  firstElementProp={null}
  lastElementProp="amILast"
>
  <div
    className={null}
  >
    <CollectionItem
      element={
        <TestElement
          amIFirst={false}
          amILast={false}
          myIndex={0}
          testData=""
        />
      }
      elementIndex={0}
      elementIndexProp="myIndex"
      firstElementProp={null}
      isFirstElement={true}
      isLastElement={false}
      key=".0"
      lastElementProp="amILast"
    >
      <TestElement
        amIFirst={false}
        amILast={false}
        myIndex={0}
        testData=""
      >
        <li>
          Item no. 
          0
        </li>
      </TestElement>
    </CollectionItem>
    <CollectionItem
      element={
        <TestElement
          amIFirst={false}
          amILast={false}
          myIndex={0}
          testData=""
        />
      }
      elementIndex={1}
      elementIndexProp="myIndex"
      firstElementProp={null}
      isFirstElement={false}
      isLastElement={false}
      key=".1"
      lastElementProp="amILast"
    >
      <TestElement
        amIFirst={false}
        amILast={false}
        myIndex={1}
        testData=""
      >
        <li>
          Item no. 
          1
        </li>
      </TestElement>
    </CollectionItem>
    <CollectionItem
      element={
        <TestElement
          amIFirst={false}
          amILast={false}
          myIndex={0}
          testData=""
        />
      }
      elementIndex={2}
      elementIndexProp="myIndex"
      firstElementProp={null}
      isFirstElement={false}
      isLastElement={false}
      key=".2"
      lastElementProp="amILast"
    >
      <TestElement
        amIFirst={false}
        amILast={false}
        myIndex={2}
        testData=""
      >
        <li>
          Item no. 
          2
        </li>
      </TestElement>
    </CollectionItem>
    <CollectionItem
      element={
        <TestElement
          amIFirst={false}
          amILast={false}
          myIndex={0}
          testData=""
        />
      }
      elementIndex={3}
      elementIndexProp="myIndex"
      firstElementProp={null}
      isFirstElement={false}
      isLastElement={false}
      key=".3"
      lastElementProp="amILast"
    >
      <TestElement
        amIFirst={false}
        amILast={false}
        myIndex={3}
        testData=""
      >
        <li>
          Item no. 
          3
        </li>
      </TestElement>
    </CollectionItem>
    <CollectionItem
      element={
        <TestElement
          amIFirst={false}
          amILast={false}
          myIndex={0}
          testData=""
        />
      }
      elementIndex={4}
      elementIndexProp="myIndex"
      firstElementProp={null}
      isFirstElement={false}
      isLastElement={true}
      key=".4"
      lastElementProp="amILast"
    >
      <TestElement
        amIFirst={false}
        amILast={true}
        myIndex={4}
        testData=""
      >
        <li>
          Item no. 
          4
          <span
            className="last"
          >
            (Last element)
          </span>
        </li>
      </TestElement>
    </CollectionItem>
  </div>
</Collection>
`;

exports[`<Collection /> renders without children 1`] = `
<div
  className={null}
/>
`;
